@@ -55,7 +55,12 @@ if (cluster_exists $version, $cluster) {
 
 if ($info{'pgdata'} && -d $info{'pgdata'}) {
     $result = system '/bin/rm', '-r', $info{'pgdata'}; 
-    exit $result if $result;
+    if ($result) {
+        if (! -w ($info{'pgdata'} . '/..')) {
+            error 'you might need to run this program with root privileges';
+        }
+        exit $result;
+    }
 } else {
     print STDERR "warning: corrupted cluster: data directory does not exist\n";
 }
